--- a/server-side/views/login.handlebars
+++ b/server-side/views/login.handlebars
@@ -9,6 +9,7 @@
     <br>
     <br>
     <input type="submit" value="Ingresar" id="submit">
+    <label for="role">Selecciona tu rol:</label>
 
 </form>
 
